--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.3.2",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "perfect-scrollbar": "1.5.5",
