--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "axios": "^1.4.0",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "papaparse": "^5.4.1",
