--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@mui/styles": "^5.14.5",
     "axios": "^1.4.0",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
+    "mui": "^0.0.1",
     "papaparse": "^5.4.1",
     "perfect-scrollbar": "1.5.5",
     "react": ">=16.8.0",
