model training pipeline

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,5 @@ GENERATE_SOURCEMAP=false
 REACT_APP_GET_ALL_DATASETS_URL='http://127.0.0.1:5000/getDatasets'
 REACT_APP_GET_DATASET_URL='http://127.0.0.1:5000/getDatasets/'
 REACT_APP_PREPROCESSING_URL='http://127.0.0.1:5000/preprocess'
+REACT_APP_TRAIN_URL='http://127.0.0.1:5000/trainModel'
+MONGODB_URI="mongodb+srv://ayushagr:SAR%4012345@automl.kio7h6o.mongodb.net/?retryWrites=true&w=majority"
