--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 GENERATE_SOURCEMAP=false
+REACT_APP_STORE_DATASET_URL='http://127.0.0.1:5000/storeDataset'
 REACT_APP_GET_ALL_DATASETS_URL='http://127.0.0.1:5000/getDatasets'
 REACT_APP_GET_DATASET_URL='http://127.0.0.1:5000/getDatasets/'
 REACT_APP_PREPROCESSING_URL='http://127.0.0.1:5000/preprocess'
