--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,8 @@ REACT_APP_GET_ALL_DATASETS_URL='http://127.0.0.1:5000/getDatasets'
 REACT_APP_GET_DATASET_URL='http://127.0.0.1:5000/getDatasets/'
 REACT_APP_PREPROCESSING_URL='http://127.0.0.1:5000/preprocess'
 REACT_APP_TRAIN_URL='http://127.0.0.1:5000/trainModel'
+REACT_APP_GET_TRAINED_MODELS_URL='http://localhost:5000/getTrainedModels'
+REACT_APP_GET_DATASET_COLUMNS_URL='http://localhost:5000/getDatasets/columns'
+REACT_APP_INFERENCE_SINGLE='http://localhost:5000/inference/single'
+REACT_APP_INFERENCE_BATCH='http://localhost:5000/inference/batch'
 MONGODB_URI="mongodb+srv://ayushagr:SAR%4012345@automl.kio7h6o.mongodb.net/?retryWrites=true&w=majority"
