--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,17 @@
     "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
     "mui": "^0.0.1",
+    "nivo": "^0.31.0",
     "papaparse": "^5.4.1",
     "perfect-scrollbar": "1.5.5",
+    "plotly.js": "^2.26.2",
+    "plotly.js-dist": "^2.26.2",
+    "plotly.js-dist-min": "^2.26.2",
     "react": "^18.2.0",
     "react-chartjs-2": "3.3.0",
     "react-dom": "^18.2.0",
     "react-notification-alert": "0.0.13",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
