--- a/frontend/.env
+++ b/frontend/.env
@@ -3,6 +3,7 @@ REACT_APP_STORE_DATASET_URL='http://127.0.0.1:5000/storeDataset'
 REACT_APP_GET_ALL_DATASETS_URL='http://127.0.0.1:5000/getDatasets'
 REACT_APP_GET_DATASET_URL='http://127.0.0.1:5000/getDatasets/'
 REACT_APP_PREPROCESSING_URL='http://127.0.0.1:5000/preprocess'
+REACT_APP_EDA_URL = 'http://127.0.0.1:5000/eda'
 REACT_APP_TRAIN_URL='http://127.0.0.1:5000/trainModel'
 REACT_APP_GET_TRAINED_MODELS_URL='http://localhost:5000/getTrainedModels'
 REACT_APP_GET_DATASET_COLUMNS_URL='http://localhost:5000/getDatasets/columns'
