--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "reactstrap": "^8.10.0",
     "rsuite": "^5.37.4",
     "sass": "1.62.1",
