--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.2",
     "chart.js": "3.9.1",
+    "file-saver": "^2.0.5",
     "mui": "^0.0.1",
     "nivo": "^0.31.0",
     "papaparse": "^5.4.1",
@@ -19,9 +20,9 @@
     "plotly.js": "^2.26.2",
     "plotly.js-dist": "^2.26.2",
     "plotly.js-dist-min": "^2.26.2",
-    "react": "^18.2.0",
+    "react": ">=16.8.0",
     "react-chartjs-2": "3.3.0",
-    "react-dom": "^18.2.0",
+    "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.11.1",
